test/negative/clafertransitionconstraint05.cfr
// Test for negative clafer constraint

a
 xor b ?
  	 --> e
  	d 
  	e 




